bugfix: don't show button panel visibility toggle in higher resolution

--- a/css/less/button.less
+++ b/css/less/button.less
@@ -95,7 +95,7 @@ a.lms-ui-link-button + button.lms-ui-button {
     padding-right: 0.1em;
   }
   .lms-ui-dropdown-toggle {
-    display: none;
+    display: none !important;
     cursor: pointer;
   }
   .lms-ui-dropdown-buttons {
